<resources>
    <string name="app_name">SyncDown</string>
    <string name="btnHost">Host Contents</string>
    <string name="btnDownload">Play video</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">WiFi Direct File Transfer</string>
    <string name="main_activity_server_title">Receive a File</string>
    <string name="path_label">Path</string>
    <string name="temp_path">/</string>
    <string name="browse_path_button">Browse</string>
    <string name="start_server_button">Start Server</string>
    <string name="stop_server_button">Stop Server</string>
    <string name="main_activity_client_title">Send a File</string>
    <string name="start_client">Start Client</string>
    <string name="server_stopped">Server has stopped</string>
    <string name="server_running">Server is running</string>
    <string name="title_activity_file_browser">WiFi Direct File Transfer</string>
    <string name="file_browser_title">File Browser</string>
    <string name="peers_list">Search Results</string>
    <string name="title_activity_client">WiFi Direct File Transfer</string>
    <string name="client_title">Send a File</string>
    <string name="client_search">Search</string>
    <string name="client_send_file">Send</string>
    <string name="no_file_selected">No file selected to transfer</string>
    <string name="select_dir">Select Directory</string>
</resources>
