<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.omerfaruk.syncdown.ClientActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/client_title"
        android:textSize="25dp"
        tools:context=".ClientActivity" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="browseForFile"
            android:text="@string/browse_path_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="searchForPeers"
            android:text="@string/client_search" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="sendFile"
            android:text="@string/client_send_file" />

    </LinearLayout>

    <TextView
        android:id="@+id/client_wifi_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:context=".ClientActivity"
        />

    <TextView
        android:id="@+id/client_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:context=".ClientActivity"
        />


    <TextView
        android:id="@+id/file_transfer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:context=".ClientActivity"
        />


    <TextView
        android:id="@+id/selected_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="3dp"
        tools:context=".ClientActivity"
        android:text="@string/no_file_selected"
        />

    <ListView
        android:id="@+id/peers_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>



</LinearLayout>
